# aemcli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  bandit-report.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
scripts/: run_checks.sh
src/aemcli/: __init__.py  cli.py
src/aemcli/commands/: __init__.py  asset_remove_unused.py  content_cleanup.py  repo.py
tests/: test_asset_remove_unused.py  test_content_cleanup.py  test_repo.py
tests/test_content/asset_remove_unused/jcr_root/content/components/component1/: .content.xml
tests/test_content/asset_remove_unused/jcr_root/content/dam/asset1/: .content.xml
tests/test_content/asset_remove_unused/jcr_root/content/dam/folder/asset2/: .content.xml
tests/test_content/asset_remove_unused/jcr_root/content/dam/uncommon/asset3/: .content.xml
tests/test_content/asset_remove_unused/jcr_root/content/pages/page1/: .content.xml
tests/test_content/asset_remove_unused/jcr_root/content/pages/page_with_reference/: .content.xml
tests/test_content/content_cleanup/: .content.xml
tests/test_content/content_cleanup/clean-file/: .content.xml
tests/test_content/content_cleanup/subpage/: .content.xml
