[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aemcli"
version = "0.3.0"
description = "A command-line tool for Adobe Experience Manager (AEM) content management and cleanup operations"
license = {text = "MIT"}
dependencies = [
    "click>=8.0"
]

[project.scripts]
aemcli = "aemcli.cli:main"